--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -128,6 +128,8 @@
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/91.html"><span style="font-size: 12px;">ﾗｲﾗ</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/127.html"><span style="font-size: 12px;">ｱﾅｽﾀｼｱ</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/197.html"><span style="font-size: 12px;">佐藤心</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/197k.html"><span style="font-size: 12px;">사토 신</span></a>
