--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -116,19 +116,25 @@
                     <div class="headline_select_idol m-Cnt"></div>
                 </div>
                 <div class="_contents m-Cnt m-Top12 m-Btm5">
-                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/89.html"><span style="font-size: 12px;">文香</span></a>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/89.html"><span style="font-size: 12px;">鷺沢文香</span></a>
                     </div>
-                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/89k.html"><span style="font-size: 12px;">후미카</span></a>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/89k.html"><span style="font-size: 12px;">사기사와 후미카</span></a>
                     </div>
-                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/196.html"><span style="font-size: 12px;">清美</span></a>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/196.html"><span style="font-size: 12px;">冴島清美</span></a>
                     </div>
-                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/196k.html"><span style="font-size: 12px;">키요미</span></a>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/196k.html"><span style="font-size: 12px;">사에지마 키요미</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/12.html"><span style="font-size: 12px;">緒方智絵里</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/87.html"><span style="font-size: 12px;">古澤頼子</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/87k.html"><span style="font-size: 12px;">후루사와 요리코</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/91.html"><span style="font-size: 12px;">ﾗｲﾗ</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/98.html"><span style="font-size: 12px;">神崎蘭子</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/98k.html"><span style="font-size: 12px;">칸자키 란코</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/127.html"><span style="font-size: 12px;">ｱﾅｽﾀｼｱ</span></a>
                     </div>
