--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -138,17 +138,23 @@
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/97.html"><span style="font-size: 12px;">高垣楓</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/97k.html"><span style="font-size: 12px;">타카가키 카에데</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/98.html"><span style="font-size: 12px;">神崎蘭子</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/98k.html"><span style="font-size: 12px;">칸자키 란코</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/123.html"><span style="font-size: 12px;">速水奏</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/123k.html"><span style="font-size: 12px;">하야미 카나데</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/127.html"><span style="font-size: 12px;">ｱﾅｽﾀｼｱ</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/127k.html"><span style="font-size: 12px;">아나스타샤</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/133.html"><span style="font-size: 12px;">鷹富士茄子</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/133k.html"><span style="font-size: 12px;">타카후지 카코</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/197.html"><span style="font-size: 12px;">佐藤心</span></a>
                     </div>
