--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -152,6 +152,10 @@
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/127k.html"><span style="font-size: 12px;">아나스타샤</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/129.html"><span style="font-size: 12px;">結城晴</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/129k.html"><span style="font-size: 12px;">유우키 하루</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/133.html"><span style="font-size: 12px;">鷹富士茄子</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/133k.html"><span style="font-size: 12px;">타카후지 카코</span></a>
