--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -128,6 +128,10 @@
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/12k.html"><span style="font-size: 12px;">오가타 치에리</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/81.html"><span style="font-size: 12px;">三船美優</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/81k.html"><span style="font-size: 12px;">미후네 미유</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/87.html"><span style="font-size: 12px;">古澤頼子</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/87k.html"><span style="font-size: 12px;">후루사와 요리코</span></a>
