--- a/campaigns/whiteday_present/index_2021.html
+++ b/campaigns/whiteday_present/index_2021.html
@@ -164,6 +164,10 @@
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/133k.html"><span style="font-size: 12px;">타카후지 카코</span></a>
                     </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/158.html"><span style="font-size: 12px;">堀裕子</span></a>
+                    </div>
+                    <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/158k.html"><span style="font-size: 12px;">호리 유코</span></a>
+                    </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/197.html"><span style="font-size: 12px;">佐藤心</span></a>
                     </div>
                     <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="base_idol_comment_present_swf_petit/2021/197k.html"><span style="font-size: 12px;">사토 신</span></a>
