--- a/mypage.html
+++ b/mypage.html
@@ -246,13 +246,13 @@
                     </a>
                     <div class="area_like_num">0 <span class="white">いいね!</span></div>
                 </div>
-                <div class="petit_idol_list" id="petit_idol_01"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/1%3Fview_page%3D1%26l_frm%3DMypage_index_1%26rnd%3D511089955'><img src='image_sp/item/l/petit_cg/chara/1033.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_1" data-id="1033" id="unique_1">
+                <div class="petit_idol_list" id="petit_idol_01"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/1'><img src='image_sp/item/l/petit_cg/chara/1033.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_1" data-id="1033" id="unique_1">
                         <div></div>
                     </a></div>
-                <div class="petit_idol_list" id="petit_idol_02"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/2%3Fview_page%3D1%26l_frm%3DMypage_index_1%26rnd%3D298551641'><img src='image_sp/item/l/petit_cg/chara/1095.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_2" data-id="1095" id="unique_2">
+                <div class="petit_idol_list" id="petit_idol_02"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/2'><img src='image_sp/item/l/petit_cg/chara/1095.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_2" data-id="1095" id="unique_2">
                         <div></div>
                     </a></div>
-                <div class="petit_idol_list" id="petit_idol_03"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/3%3Fview_page%3D1%26l_frm%3DMypage_index_1%26rnd%3D537289373'><img src='image_sp/item/l/petit_cg/chara/1108.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_3" data-id="1108" id="unique_3">
+                <div class="petit_idol_list" id="petit_idol_03"><a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/petit_cg/index/3'><img src='image_sp/item/l/petit_cg/chara/1108.png' width="110" height="149" class="idol_img"></a><a href='#' class="lesson_comp jsOnDesignBtn" rel="petit_idol_3" data-id="1108" id="unique_3">
                         <div></div>
                     </a></div>
             </div>
@@ -292,6 +292,11 @@
         <div class="t-Cnt m-Btm8">
             <div class="area_banner_type_text jsOnBanner">
                 <div class="t-Cnt"><a href='memory/detail/1918/10030/index.html' class="banner_type_text" style='background-image:url(image_sp/event/1918/banner_event_01.png)'></a></div>
+            </div>
+        </div>
+        <div class="t-Cnt m-Btm8">
+            <div class="area_banner_type_text jsOnBanner">
+                <div class="t-Cnt"><a href='event_produce/1733/memory.html' class="banner_type_text" style='background-image:url(image_sp/event/1733/banner_event_01.png)'></a></div>
             </div>
         </div>
         <section>
