--- a/birthday/main.html
+++ b/birthday/main.html
@@ -197,6 +197,21 @@
                     </div>
                 </a>
             </div>
+            <div class="area_birthday jsOnBanner">
+                <a href='momoka2021.html' class="banner_birthday_renewal area_banner_wrap">
+                    <div class="text_area">4월8일</div>
+                    <div class="idol_lbirthday">
+                        <ul>
+                            <li><img src='../image_sp/card/xs/momoka_37.jpg' width="30"></li>
+                        </ul>
+                    </div>
+                    <div class="idol_lbirthday_text count_1">
+                        <div>
+                            모모카<br>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <script>
                 $(function() {
                     $('#jsBtnBreaBannerTriplicate').on('click', function(e) {
