--- a/memory/unit_collection_detail/unit_j.html
+++ b/memory/unit_collection_detail/unit_j.html
@@ -293,6 +293,14 @@
                     <img src='../../image_sp/event_flash/840/unit/840102.png'>
                 </div>
             </a>
+            <a href='845/104/1.html' class="unit_collection jsOnDesignBtn" style="">
+                <div class="event_story_title">
+                    <p>BRIGHT：LIGHTS</p>
+                </div>
+                <div class="event_story_chara">
+                    <img src='../../image_sp/event_flash/845/unit/845104.png'>
+                </div>
+            </a>
         </div>
         <div id="area_tab_2" class="t-Cnt" style="display:none">
             <a href='755/034/1.html' class="unit_collection jsOnDesignBtn" style="">
