--- a/memory/unit_collection_detail/unit.html
+++ b/memory/unit_collection_detail/unit.html
@@ -293,6 +293,14 @@
                     <img src='../../image_sp/event_flash/840/unit/840102.png'>
                 </div>
             </a>
+            <a href='845/104/1.html' class="unit_collection jsOnDesignBtn" style="">
+                <div class="event_story_title">
+                    <p>BRIGHT：LIGHTS</p>
+                </div>
+                <div class="event_story_chara">
+                    <img src='../../image_sp/event_flash/845/unit/845104.png'>
+                </div>
+            </a>
         </div>
         <div id="area_tab_2" class="t-Cnt" style="display:none">
             <a href='755/034/1.html' class="unit_collection jsOnDesignBtn" style="">
@@ -373,7 +381,7 @@
         <div id="area_tab_4" class="t-Cnt" style="display:none">
             <a href='2007/fumika/1.html' class="unit_collection jsOnDesignBtn" style="">
                 <div class="event_story_title">
-                    <p>鷺沢文香 from<br>トランクィル・ウィスパー</p>
+                    <p>사기사와후미카 from<br>트랭퀼・위스퍼</p>
                 </div>
                 <div class="event_story_chara">
                     <img src='../../image_sp/event_flash/2007/unit/103.png'>
@@ -381,7 +389,7 @@
             </a>
             <a href='2007/103/1.html' class="unit_collection jsOnDesignBtn" style="">
                 <div class="event_story_title">
-                    <p>トランクィル・ウィスパー</p>
+                    <p>트랭퀼・위스퍼</p>
                 </div>
                 <div class="event_story_chara">
                     <img src='../../image_sp/event_flash/2007/unit/103.png'>
