--- a/memory/unit_collection_detail/unit.html
+++ b/memory/unit_collection_detail/unit.html
@@ -287,7 +287,7 @@
         <div id="area_tab_1" class="t-Cnt">
             <a href='840/102/1.html' class="unit_collection jsOnDesignBtn" style="">
                 <div class="event_story_title">
-                    <p>트랭퀼 위스퍼</p>
+                    <p>트랭퀼・위스퍼</p>
                 </div>
                 <div class="event_story_chara">
                     <img src='../../image_sp/event_flash/840/unit/840102.png'>
