--- a/memory/unit_collection_detail/845/104/3.html
+++ b/memory/unit_collection_detail/845/104/3.html
@@ -115,7 +115,7 @@
                 <div class="fukidashiWrap is-top">
                     <div class="fukiTop fukidashi att_2 unit2 position1">
                         <div class="comments">
-                            …春の訪れと喜びを､文にして…送ってもいいでしょうか…?
+                            …華やかなｽﾃｰｼﾞに､春風が舞い…まるで､春の祝福のようです
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="fukidashiWrap is-bottom">
                     <div class="fukiBtm fukidashi att_2 unit2 position2">
                         <div class="comments">
-                            文香さんからのお手紙…是非､お願いします｡私も書きます…!
+                            詩的な表現ですね｡肌で感じる感覚…私ももっと養います…!
                         </div>
                     </div>
                 </div>
