--- a/vote/publish_all/200010.html
+++ b/vote/publish_all/200010.html
@@ -108,17 +108,17 @@
         <link rel="stylesheet" type="text/css" href='../../css/rich/vote.css' media="all">
         <div class="area_page_layout _into_header _type_1">
             <div class="vote_header header_1_result m-Head_img">
-                <a href="../../vote/publish_all/210004" class="button_change_type button_switch_voice_audition jsOnDesignBtn"></a>
+                <a href="210004.html" class="button_change_type button_switch_voice_audition jsOnDesignBtn"></a>
             </div>
             <div class="heading_result m-Cnt"></div>
             <div class="area_result">
                 <div class="tab_wrapper m-Cnt">
-                    <div class="tab_attr tab_result_attr_1_select"></div><a href='../../vote/publish_all/200010/1/1' class="tab_attr tab_result_attr_2"></a><a href='../../vote/publish_all/200010/1/2' class="tab_attr tab_result_attr_3"></a><a href='../../vote/publish_all/200010/1/3' class="tab_attr tab_result_attr_4"></a>
+                    <div class="tab_attr tab_result_attr_1_select"></div><a href='200010/1/1.html' class="tab_attr tab_result_attr_2"></a><a href='200010/1/2.html' class="tab_attr tab_result_attr_3"></a><a href='200010/1/3.html' class="tab_attr tab_result_attr_4"></a>
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="area_result_top10">
                         <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort">
-                            <div class="tab_sort tab_result_rank_sort_1_select"></div><a href='../../vote/publish_all/200010' class="tab_sort tab_result_rank_sort_2"></a>
+                            <div class="tab_sort tab_result_rank_sort_1_select"></div><a href='200010.html' class="tab_sort tab_result_rank_sort_2"></a>
                         </div>
                         <div class="m-Cnt">
                             <img src="../../image_sp/campaign/vote/10th/result/result_all_1.png" width="304">
