--- a/vote/publish_all/200010.html
+++ b/vote/publish_all/200010.html
@@ -126,25 +126,21 @@
                     </div>
                     <div class=" m-Top12">
                         <p class="t-Cnt vote_blue2">アニメーション演出を再び見ることができます。</p>
-                        <div class="selectArea type_02">
-                            <form method="post" action="../../vote/again_publish">
-                                <div class="area-btn-common _base-width">
-                                    <select name="select" class="search_pulldown_1_5">
-                                        <option value=0>全体順位 10位～6位</option>
-                                        <option value=1>全体順位 5位</option>
-                                        <option value=2>全体順位 4位</option>
-                                        <option value=3>全体順位 3位</option>
-                                        <option value=4>全体順位 2位</option>
-                                        <option value=5>全体順位 1位</option>
-                                        <option value=6>全体順位 TOP5</option>
-                                        <option value=7>タイプ別順位 TOP3</option>
-                                    </select>
-                                    <label class="btn_decision_sub_line_3" onClick="">
-                                        <input type="submit" value="演出を見る">
-                                    </label>
-                                </div>
-                                <input type="hidden" name="event_id" value="200010">
-                            </form>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/0.html"><span style="font-size: 12px;">전체순위 10위～6위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/1.html"><span style="font-size: 12px;">전체순위 5위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/2.html"><span style="font-size: 12px;">전체순위 4위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/3.html"><span style="font-size: 12px;">전체순위 3위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/4.html"><span style="font-size: 12px;">전체순위 2위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/5.html"><span style="font-size: 12px;">전체순위 1위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/6.html"><span style="font-size: 12px;">전체순위 TOP5</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/7.html"><span style="font-size: 12px;">타입별 순위 TOP3</span></a>
                         </div>
                     </div>
                 </div>
