--- a/vote/publish_all/200010/1/1.html
+++ b/vote/publish_all/200010/1/1.html
@@ -104,7 +104,7 @@
 <body id="vote" class="publish_all">
     <div id="top" class="page_container jsOnBtn">
         <input id="delay" type="hidden" value="0">
-        <link rel="stylesheet" type="text/css" href='../../../../css/rich/vote.css' media="all">
+        <link rel="stylesheet" type="text/css" href='../../../../css/rich/vote10.css' media="all">
         <div class="area_page_layout _into_header _type_1">
             <div class="vote_header header_1_result m-Head_img">
                 <a href="../../210004.html" class="button_change_type button_switch_voice_audition jsOnDesignBtn"></a>
