--- a/vote/publish_all/200010/1/1.html
+++ b/vote/publish_all/200010/1/1.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="m-Top8 area_result_by_attr">
-                        <img src="../../image_sp/campaign/vote/10th/result/result_cute.png" width="304">
+                        <img src="../../../../image_sp/campaign/vote/10th/result/result_cute.png" width="304">
                     </div>
                     <div class=" m-Top12">
                         <p class="t-Cnt vote_blue2">アニメーション演出を再び見ることができます。</p>
