--- a/vote/publish_all/200010/1/1.html
+++ b/vote/publish_all/200010/1/1.html
@@ -34,7 +34,7 @@
             document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
         }
     </script>
-    <script src="../../js/jquery-2.2.2.min.js"></script>
+    <script src="../../../../js/jquery-2.2.2.min.js"></script>
     <script>
         (function() {
             window.viewer_id = 134800333;
