--- a/vote/publish_all/200010/1/2.html
+++ b/vote/publish_all/200010/1/2.html
@@ -113,8 +113,7 @@
             <div class="heading_result m-Cnt"></div>
             <div class="area_result">
                 <div class="tab_wrapper m-Cnt">
-                    <a href='../../200010.html' class="tab_attr tab_result_attr_1"></a><a href='1.html' class="tab_attr tab_result_attr_2"></a>
-                    <div class="tab_attr tab_result_attr_3_select"></div><a href='3.html' class="tab_attr tab_result_attr_4"></a>
+                    <a href='../../200010.html' class="tab_attr tab_result_attr_1"></a><a href='1.html' class="tab_attr tab_result_attr_2"></a><div class="tab_attr tab_result_attr_3_select"></div><a href='3.html' class="tab_attr tab_result_attr_4"></a>
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="m-Top8 area_result_by_attr">
