--- a/vote/publish_all/200010/1/1.html
+++ b/vote/publish_all/200010/1/1.html
@@ -112,8 +112,7 @@
             <div class="heading_result m-Cnt"></div>
             <div class="area_result">
                 <div class="tab_wrapper m-Cnt">
-                    <a href='../../200010.html' class="tab_attr tab_result_attr_1"></a>
-                    <div class="tab_attr tab_result_attr_2_select"></div><a href='2.html' class="tab_attr tab_result_attr_3"></a><a href='3.html' class="tab_attr tab_result_attr_4"></a>
+                    <a href='../../200010.html' class="tab_attr tab_result_attr_1"></a><div class="tab_attr tab_result_attr_2_select"></div><a href='2.html' class="tab_attr tab_result_attr_3"></a><a href='3.html' class="tab_attr tab_result_attr_4"></a>
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="m-Top8 area_result_by_attr">
