--- a/vote/publish_all/200010.html
+++ b/vote/publish_all/200010.html
@@ -151,8 +151,8 @@
             <p>・アイドルの順位、得票数についてはご案内を行っておりませんので、ご了承ください。</p>
         </div>
         <div class="m-Top12">
-            <a href='../../mypage.html'>
-                <div class="backLink">マイスタジオ</div>
+            <a href='../../memory/anniversary.html'>
+                <div class="backLink">기념일 모음</div>
             </a>
         </div>
         <script>
