--- a/vote/publish_all/200010/1/1.html
+++ b/vote/publish_all/200010/1/1.html
@@ -145,8 +145,9 @@
             <p>・アイドルの順位、得票数についてはご案内を行っておりませんので、ご了承ください。</p>
         </div>
         <div class="m-Top12">
-            <a href='../../../../mypage'>
-                <div class="backLink">マイスタジオ</div>
+            <a href="../../200010.html" class="backLink">총선거TOP</a>
+            <a href='../../../../memory/anniversary.html'>
+                <div class="backLink">기념일 모음</div>
             </a>
         </div>
         <script>
