--- a/memory/anniversary.html
+++ b/memory/anniversary.html
@@ -95,6 +95,11 @@
                 <div></div>
             </a>
         </div>
+        <div class="jsOnBanner">
+            <a href="../vote/publish_all/200010.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/aa46ce5a44349928bd971717125de32d.png)">
+                <div></div>
+            </a>
+        </div>
         <h2 class="title_img_blue" style="margin:0;">
             <div>2021</div>
         </h2>
