--- a/vote/publish_all/200010.html
+++ b/vote/publish_all/200010.html
@@ -118,7 +118,7 @@
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="area_result_top10">
                         <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort">
-                            <div class="tab_sort tab_result_rank_sort_1_select"></div><a href='200010.html' class="tab_sort tab_result_rank_sort_2"></a>
+                            <div class="tab_sort tab_result_rank_sort_1_select"></div><a href='200010_2.html' class="tab_sort tab_result_rank_sort_2"></a>
                         </div>
                         <div class="m-Cnt">
                             <img src="../../image_sp/campaign/vote/10th/result/result_all_1.png" width="304">
