--- a/vote/publish_all/200010_2.html
+++ b/vote/publish_all/200010_2.html
@@ -113,11 +113,11 @@
             <div class="heading_result m-Cnt"></div>
             <div class="area_result">
                 <div class="tab_wrapper m-Cnt">
-                    <div class="tab_attr tab_result_attr_1_select"></div><a href='../../vote/publish_all/200010/1/1.html' class="tab_attr tab_result_attr_2"></a><a href='../../vote/publish_all/200010/1/2.html' class="tab_attr tab_result_attr_3"></a><a href='../../vote/publish_all/200010/1/3.html' class="tab_attr tab_result_attr_4"></a>
+                    <div class="tab_attr tab_result_attr_1_select"></div><a href='200010/1/1.html' class="tab_attr tab_result_attr_2"></a><a href='200010/1/2.html' class="tab_attr tab_result_attr_3"></a><a href='200010/1/3.html' class="tab_attr tab_result_attr_4"></a>
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="vote_frame_publish_all _type_all">
-                        <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort"><a href="../../vote/publish_all/200010.html" class="tab_sort tab_result_rank_sort_1"></a>
+                        <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort"><a href="200010.html" class="tab_sort tab_result_rank_sort_1"></a>
                             <div class="tab_sort tab_result_rank_sort_2_select"></div>
                         </div>
                         <div class="area_result_11_50">
@@ -365,25 +365,21 @@
                     </div>
                     <div class=" m-Top12">
                         <p class="t-Cnt vote_blue2">アニメーション演出を再び見ることができます。</p>
-                        <div class="selectArea type_02">
-                            <form method="post" action="../../vote/again_publish">
-                                <div class="area-btn-common _base-width">
-                                    <select name="select" class="search_pulldown_1_5">
-                                        <option value=0>全体順位 10位～6位</option>
-                                        <option value=1>全体順位 5位</option>
-                                        <option value=2>全体順位 4位</option>
-                                        <option value=3>全体順位 3位</option>
-                                        <option value=4>全体順位 2位</option>
-                                        <option value=5>全体順位 1位</option>
-                                        <option value=6>全体順位 TOP5</option>
-                                        <option value=7>タイプ別順位 TOP3</option>
-                                    </select>
-                                    <label class="btn_decision_sub_line_3" onClick="">
-                                        <input type="submit" value="演出を見る">
-                                    </label>
-                                </div>
-                                <input type="hidden" name="event_id" value="200010">
-                            </form>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/0.html"><span style="font-size: 12px;">전체순위 10위～6위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/1.html"><span style="font-size: 12px;">전체순위 5위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/2.html"><span style="font-size: 12px;">전체순위 4위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/3.html"><span style="font-size: 12px;">전체순위 3위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/4.html"><span style="font-size: 12px;">전체순위 2위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/5.html"><span style="font-size: 12px;">전체순위 1위</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/6.html"><span style="font-size: 12px;">전체순위 TOP5</span></a>
+                        </div>
+                        <div class="m-Btm8" style="display:inline-block;"><a class="btn_normal_line_2" href="../again_publish/200010/7.html"><span style="font-size: 12px;">타입별 순위 TOP3</span></a>
                         </div>
                     </div>
                 </div>
