--- a/vote/publish_all/200010_2.html
+++ b/vote/publish_all/200010_2.html
@@ -117,8 +117,7 @@
                 </div>
                 <div class="result_contents m-Cnt m-Top8">
                     <div class="vote_frame_publish_all _type_all">
-                        <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort"><a href="200010.html" class="tab_sort tab_result_rank_sort_1"></a>
-                            <div class="tab_sort tab_result_rank_sort_2_select"></div>
+                        <div class="tab_ranksort _base_width m-Cnt jsOnBtn jsTabRankSort"><a href="200010.html" class="tab_sort tab_result_rank_sort_1"></a><div class="tab_sort tab_result_rank_sort_2_select"></div>
                         </div>
                         <div class="area_result_11_50">
                             <div class="result_idol text_color_cute" style="margin:0 1px 0">
