--- a/memory/unit_collection_detail/760/063/3.html
+++ b/memory/unit_collection_detail/760/063/3.html
@@ -113,7 +113,7 @@
                     <img src="../../../../image_sp/event/common/live_lose.png" width="80" alt="LOSE">
                 </div>
                 <div class="fukidashiWrap is-top">
-                    <div class="fukiTop fukidashi att_3 unit4 position2">
+                    <div class="fukiTop fukidashi att_3 unit4 position1">
                         <div class="comments">
                             本にくっついたり…ｶﾋﾞは困りものですからね｡綺麗にしないと
                         </div>
@@ -121,9 +121,9 @@
                 </div>
                 <img src="../../../../image_sp/event_flash/760/unit/760063.png" width="320px">
                 <div class="fukidashiWrap is-bottom">
-                    <div class="fukiBtm fukidashi att_1 unit4 position3">
+                    <div class="fukiBtm fukidashi att_2 unit4 position4">
                         <div class="comments">
-                            喉を傷める原因にもなるので､ｹｱはしっかりしましょうね
+                            優しいのね｡大丈夫､ｱｵｶﾋﾞとか､人と仲良しのｶﾋﾞもいるの♪
                         </div>
                     </div>
                 </div>
