--- a/memory/unit_collection_detail/unit_j.html
+++ b/memory/unit_collection_detail/unit_j.html
@@ -343,6 +343,14 @@
                     <img src='../../image_sp/event_flash/759/unit/759062.png'>
                 </div>
             </a>
+            <a href='760/063/1.html' class="unit_collection jsOnDesignBtn" style="">
+                <div class="event_story_title">
+                    <p>みんなで学ぼう! カビの種類?</p>
+                </div>
+                <div class="event_story_chara">
+                    <img src='../../image_sp/event_flash/760/unit/760063.png'>
+                </div>
+            </a>
         </div>
         <div id="area_tab_3" class="t-Cnt" style="display:none">
             <a href='1928/140/1.html' class="unit_collection jsOnDesignBtn" style="">
