--- a/memory/unit_collection_detail/760/063/3.html
+++ b/memory/unit_collection_detail/760/063/3.html
@@ -115,7 +115,7 @@
                 <div class="fukidashiWrap is-top">
                     <div class="fukiTop fukidashi att_3 unit4 position1">
                         <div class="comments">
-                            本にくっついたり…ｶﾋﾞは困りものですからね｡綺麗にしないと
+                            ｶﾋﾞとも仲良くしてｰですよ｡みんな笑顔が一番でやがります!
                         </div>
                     </div>
                 </div>
