--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3588,82 +3588,82 @@ kg
                         "2": "1"
                     },
                     "flash_path": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/407/1/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D687346425",
-                        "2": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/407/3/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D30137963"
+                        "0": "../../idol_story/movie_play/407/1.html",
+                        "2": "../../idol_story/movie_play/407/3.html"
                     },
                     "voice_url": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/407/1/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D335586851",
-                        "2": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/407/3/idol_gallery/__hash_card_id__"
+                        "0": "../../idol_story/sound_play/407/1.html",
+                        "2": "../../idol_story/sound_play/407/3.html"
                     },
                     "open_flag": {
                         "0": "1",
                         "2": "1"
                     },
                     "icon": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/089.jpg",
-                        "2": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_407_3.jpg"
+                        "0": "../../image_sp/ui/episode/base/089.jpg",
+                        "2": "../../image_sp/ui/episode/epi_button_movie_407_3.jpg"
                     },
                     "movie_name_voice": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_early.png",
-                        "2": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_late.png"
+                        "0": "../../image_sp/ui/episode/epi_button_moviename_cool_early.png",
+                        "2": "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"
                     }
                 }, {
                     "story_id": "381",
-                    "story_title": "\u79cb\u306e\u7269\u8a9e\u2026\u266a\u7652\u3057\u306e\u6e6f\u306e\u9999",
+                    "story_title": "秋の物語…♪癒しの湯の香",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
                     },
                     "flash_path": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/381/1/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D28137800",
-                        "3": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/381/4/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D794428891"
+                        "0": "../../idol_story/movie_play/381/1.html",
+                        "3": "../../idol_story/movie_play/381/4.html"
                     },
                     "voice_url": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/381/1/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D18638554",
-                        "3": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/381/4/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D555790264"
+                        "0": "../../idol_story/sound_play/381/1.html",
+                        "3": "../../idol_story/sound_play/381/4.html"
                     },
                     "open_flag": {
                         "0": "1",
                         "3": "1"
                     },
                     "icon": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/089.jpg",
-                        "3": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_381_4.jpg%3Fv%3D20191031144629"
+                        "0": "../../image_sp/ui/episode/base/089.jpg",
+                        "3": "../../image_sp/ui/episode/epi_button_movie_381_4.jpg"
                     },
                     "movie_name_voice": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_early.png",
-                        "3": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_late.png"
+                        "0": "../../image_sp/ui/episode/epi_button_moviename_cool_early.png",
+                        "3": "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"
                     }
                 }, {
                     "story_id": "305",
-                    "story_title": "\u5929\u9ad8\u304f!\u8f1d\u3051\u79cb\u306e\u904b\u52d5\u4f1a",
+                    "story_title": "天高く!輝け秋の運動会",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
                     },
                     "flash_path": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/305/1/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D964367678",
-                        "3": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/305/4/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D208491870"
+                        "0": "../../idol_story/movie_play/305/1.html",
+                        "3": "../../idol_story/movie_play/305/4.html"
                     },
                     "voice_url": {
-                        "0": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/305/1/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D164488099",
-                        "3": "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/305/4/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D716962885"
+                        "0": "../../idol_story/sound_play/305/1.html",
+                        "3": "../../idol_story/sound_play/305/4.html"
                     },
                     "open_flag": {
                         "0": "1",
                         "3": "1"
                     },
                     "icon": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/089.jpg",
-                        "3": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_305_4.jpg%3Fv%3D20190524145750"
+                        "0": "../../image_sp/ui/episode/base/089.jpg",
+                        "3": "../../image_sp/ui/episode/epi_button_movie_305_4.jpg"
                     },
                     "movie_name_voice": {
-                        "0": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_early.png",
-                        "3": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cool_late.png"
+                        "0": "../../image_sp/ui/episode/epi_button_moviename_cool_early.png",
+                        "3": "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"
                     }
                 }, {
                     "story_id": "258",
-                    "story_title": "\u8056\u591c\u306e\u71c8\u706b",
+                    "story_title": "聖夜の燈火",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/258/1/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D84558048", "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/258/2/idol_gallery--idol_detail--__hash_card_id__--2%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D265578204"],
                     "voice_url": ["http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/258/1/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D400108521", "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/258/2/idol_gallery/__hash_card_id__%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D893291474"],
