--- a/idol_gallery/idol_detail/fumika_test.html
+++ b/idol_gallery/idol_detail/fumika_test.html
@@ -3867,8 +3867,8 @@ kg
                           "../../image_sp/card/l/fumika_34.jpg", 
                           "../../image_sp/card/l/fumika_35.jpg", 
                           "../../image_sp/card/l/fumika_36.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/45b089ee2ddc60f26d271e1e0a86e0df.jpg", 
-                          "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/1bfbf5c344ce17e6e86444dbb72154d6.jpg"],
+                          "../../image_sp/card/l/fumika_37.jpg", 
+                          "../../image_sp/card/l/fumika_38.jpg"],
                     "l_premium": {
                         "4": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/ce511e82689c364d20fec5608adc6cf3.jpg",
                         "5": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/5a726b8a757f4b8cf9119dfa675816b5.jpg",
